
  * Final 9.0 release, upload to unstable (will not go into Squeeze, though).
  * debian/postgresql-9.0.preinst: Add missing debhelper token.
  * debian/control: Bump Standards-Version to 3.9.1; no changes necessary.
  * debian/control: Build the versionless metapackages now and point them to
    9.0.
  * debian/control: Fix Vcs-* to point to 9.0 branch.

 -- Martin Pitt <mpitt@debian.org>  Wed, 01 Sep 2010 12:16:03 +0200

postgresql-9.0 (9.0~rc1-1) experimental; urgency=low

  * First 9.0 release candidate.

 -- Martin Pitt <mpitt@debian.org>  Wed, 01 Sep 2010 11:50:54 +0200

postgresql-9.0 (9.0~beta4-1) experimental; urgency=low

  * New upstream beta release.

 -- Martin Pitt <mpitt@debian.org>  Sun, 01 Aug 2010 21:19:01 +0200

postgresql-9.0 (9.0~beta3-2) experimental; urgency=low

  * Migrate to a common init script for all server versions, to avoid
    providing the "postgresql" service in multiple packages (which causes
    insserv to complain bitterly):
    - Drop debian/postgresql-9.0.init.
    - debian/control: Bump dependency to postgresql-common to ensure we have a
      common /etc/init.d/postgresql init script.
    - debian/postgresql-9.0.preinst: Remove/rename our init script on upgrade.	
    - debian/postgresql-9.0.prerm: Call stop_version on upgrade/removal.
    - debian/rules: Drop dh_installinit arguments.
    - (Closes: #589523)

 -- Martin Pitt <mpitt@debian.org>  Mon, 19 Jul 2010 23:34:13 +0200

postgresql-9.0 (9.0~beta3-1) experimental; urgency=low

  * New upstream beta release.
  * debian/postgresql-contrib-9.0.install: Add the new pg_archivecleanup.

 -- Martin Pitt <mpitt@debian.org>  Tue, 13 Jul 2010 10:09:02 +0200

postgresql-9.0 (9.0~beta2-1) experimental; urgency=low

  * New upstream beta release.
  * debian/postgresql-9.0.install: Install pg_upgrade.
  * debian/control: Set back maintainer to me, but keep Peter Eisentraut as
    Uploader.

 -- Martin Pitt <mpitt@debian.org>  Sun, 06 Jun 2010 19:18:03 +0200
