@@ -6,6 +6,8 @@ postgresql-9.0 (9.0.0-1) UNRELEASED; urgency=low
   * debian/control: Build the versionless metapackages now and point them to
     9.0.
   * debian/control: Fix Vcs-* to point to 9.0 branch.
+  * debian/rules: Drop special-case building with -O1 on sparc and alpha,
+    let's see how the current compiler does.
 
  -- Martin Pitt <mpitt@debian.org>  Wed, 01 Sep 2010 12:16:03 +0200
 
